include email icon in amil to link

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ h1{
               <h1><img src="/logo.png" title="Optimized Code Development" alt="Optimized Code Development logo" /></p>
             </div>
             <div class="bottom-left">
-              <p>✉ <a href="mailto:info@ocdhub.co.za">info@ocdhub.co.za</a></p>
+              <p><a href="mailto:info@ocdhub.co.za">✉ info@ocdhub.co.za</a></p>
             </div>
           </div>
           
