--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Dah! Dah! - Gordon Beeming Demos</title>
+        <title>Optimized Code Development</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -41,7 +41,7 @@ body, html {
   /* Add position: relative to enable absolutely positioned elements inside the image (place text) */
   position: relative;
   /* Add a white text color to all elements inside the .bgimg container */
-  color: #f5f5f5;
+  color: rgb(1, 138, 192);
   /* Add a font */
   font-family: "Courier New", Courier, monospace;
   /* Set the font-size to 25 pixels */
@@ -49,7 +49,7 @@ body, html {
 }
 
 a{    
-  color: #f5f5f5;
+  color: rgb(1, 138, 192);
   text-decoration: none;
 }
 
@@ -63,25 +63,48 @@ h1{
     font-weight: bold;
 }
 @media screen and (max-width: 940px) {
+  img {
+    height: 75px;
+  }
+
   h1{
     font-size: 1.75em;
   }
 }
 @media screen and (max-width: 820px) {
+  img {
+    height: 50px;
+  }
+
   h1{
     font-size: 1.50em;
   }
 }
 @media screen and (max-width: 675px) {
+  img {
+    height: 40px;
+  }
+
   h1{
     font-size: 1.25em;
   }
 }
 @media screen and (max-width: 565px) {
+  img {
+    height: 30px;
+  }
+
   h1{
     font-size: 1.1em;
   }
 }
+/* Position text in the top-left corner */
+.top-left {
+  position: absolute;
+  top: 0;
+  left: 16px;
+}
+
 /* Position text in the top-right corner */
 .top-right {
   position: absolute;
@@ -101,12 +124,17 @@ h1{
     <body>
 
         <div class="bgimg">
+            <div class="top-left">
+              <h1>Optimized Code Development</p>
+            </div>
             <div class="top-right">
-              <h1>Dah! Dah!</p>
+              <h1><img src="/logo.png" title="Optimized Code Development" alt="Optimized Code Development logo" /></p>
             </div>
             <div class="bottom-left">
-              <p><a href="https://beeming.dev">Gordon Beeming</a> Demos</p>
+              <p><a href="mailto:info@ocdhub.co.za">✉ info@ocdhub.co.za</a></p>
             </div>
           </div>
+          
+
     </body>
 </html>
